# matchX

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SAFETY.md  deep-research-report.md
.claude/: settings.local.json
.github/scripts/: check-latency-regression.sh
.github/workflows/: ci.yml
crates/matchx-arena/: Cargo.toml
crates/matchx-arena/src/: lib.rs
crates/matchx-bench/: Cargo.toml
crates/matchx-bench/benches/: latency_histogram.rs  matching.rs
crates/matchx-bench/src/: lib.rs  metrics.rs  pipeline.rs
crates/matchx-book/: Cargo.toml
crates/matchx-book/src/: lib.rs
crates/matchx-book/tests/: sparse_volume_index.rs
crates/matchx-engine/: Cargo.toml
crates/matchx-engine/src/: lib.rs  policy.rs
crates/matchx-engine/tests/: properties.rs
crates/matchx-itests/: Cargo.toml
crates/matchx-itests/tests/: async_wal_replay_determinism.rs  replay_determinism.rs
crates/matchx-journal/: Cargo.toml
crates/matchx-journal/src/: async_journal.rs  codec.rs  lib.rs  reader.rs  recovery.rs  streaming_reader.rs  writer.rs
crates/matchx-journal/tests/: recovery.rs
crates/matchx-types/: Cargo.toml
crates/matchx-types/src/: lib.rs
docs/baselines/: 2026-03-02-after-lto.txt  2026-03-02-baseline.txt  2026-03-02-latency-histogram.txt  2026-03-03-async-wal-matching-merge-compare.md  2026-03-03-final-summary.md  2026-03-03-final.txt
docs/plans/: 2026-02-26-matching-engine-core-design.md  2026-02-26-matching-engine-core-plan.md  2026-03-02-latency-platform-async-wal-plan.md  2026-03-02-latency-platform-design.md  2026-03-02-performance-micro-optimization-design.md  2026-03-02-performance-micro-optimization-plan.md  2026-03-03-feature-parity-port-design.md  2026-03-03-orderbook-rs-vs-matchx-parity-matrix.md  latency-benchmark-baseline.md
docs/superpowers/plans/: 2026-03-30-matchx-hardening-plan.md
docs/superpowers/specs/: 2026-03-30-matchx-hardening-design.md
scripts/: pgo-bench.sh  run-bench-rt.sh  setup-cpu-isolation.sh
