[package]
name = "matchx-bench"
version.workspace = true
edition.workspace = true

[dependencies]
matchx-types.workspace = true
matchx-arena.workspace = true
matchx-book.workspace = true
matchx-engine.workspace = true
matchx-journal.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matching"
harness = false
