[package]
name = "matchx-bench"
version.workspace = true
edition.workspace = true

[dependencies]
matchx-types.workspace = true
matchx-arena.workspace = true
matchx-book.workspace = true
matchx-engine.workspace = true
matchx-journal.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "latency_histogram"
harness = false

[dev-dependencies]
tempfile = "3"
